13 June 2016: Wouter
	- Fix #778: unbound 1.5.9: -h segfault (null deref).

10 June 2016: Wouter
	- And delete service.conf.shipped on uninstall.
	- In unbound.conf directory: dir immediately changes to that directory,
	  so that include: file below that is relative to that directory.
	  With chroot, make the directory an absolute path inside chroot.
	- keep debug symbols in windows build.
	- do not delete service.conf on windows uninstall.
	- document directory immediate fix and allow EXECUTABLE syntax in it
	  on windows.

9 June 2016: Wouter
	- Trunk is called 1.5.10 (with previous fixes already in there to 2
	  june).
	- Revert fix for NetworkService account on windows due to breakage
	  it causes.
	- Fix that windows install will not overwrite existing service.conf
	  file (and ignore gui config choices if it exists).

7 June 2016: Ralph
	- Lookup localzones by taglist from acl.
	- Possibility to lookup local_zone, regardless the taglist.
	- Added local_zone/taglist/acl unit test.

7 June 2016: Wouter
	- Fix #773: Non-standard Python location build failure with pyunbound.
	- Improve threadsafety for openssl 0.9.8 ecdsa dnssec signatures.

6 June 2016: Wouter
	- Better help text from -h (from Ray Griffith).
	- access-control-tag config directive.
	- local-zone-override config directive.
	- access-control-tag-action and access-control-tag-data config
	  directives.
	- free acl-tags, acltag-action and acltag-data config lists during
	  initialisation to free up memory for more entries.

3 June 2016: Wouter
	- Fix to not ignore return value of chown() in daemon startup.

2 June 2016: Wouter
	- Fix libubound for edns optlist feature.
	- Fix distinction between free and CRYPTO_free in dsa and ecdsa alloc.
	- Fix #752: retry resource temporarily unavailable on control pipe.
	- un-document localzone tags.
	- tag for release 1.5.9rc1.
	  And this also became release 1.5.9.
	- Fix (for 1.5.10): Fix unbound-anchor.exe file location defaults to