@@ -30,7 +30,7 @@ MATCH opcode qtype qname
 ADJUST copy_id
 REPLY QR NOERROR
 SECTION QUESTION
-com. IN NS
+com. IN A
 SECTION AUTHORITY
 com.	IN NS	a.gtld-servers.net.
 SECTION ADDITIONAL
@@ -46,8 +46,8 @@ MATCH opcode qtype qname
 ADJUST copy_id
 REPLY QR NOERROR
 SECTION QUESTION
-com. IN NS
-SECTION ANSWER
+com. IN A
+SECTION AUTHORITY
 com.	IN NS	a.gtld-servers.net.
 SECTION ADDITIONAL
 a.gtld-servers.net.	IN 	A	192.5.6.30
@@ -58,7 +58,7 @@ MATCH opcode qtype qname
 ADJUST copy_id
 REPLY QR NOERROR
 SECTION QUESTION
-example.com. IN NS
+example.com. IN A
 SECTION AUTHORITY
 example.com.	IN NS	ns.example.com.
 SECTION ADDITIONAL
@@ -74,7 +74,7 @@ MATCH opcode qtype qname
 ADJUST copy_id
 REPLY QR REFUSED
 SECTION QUESTION
-refused.example.com. IN NS
+refused.example.com. IN A
 ENTRY_END
 
 ENTRY_BEGIN
@@ -82,7 +82,7 @@ MATCH opcode qtype qname
 ADJUST copy_id
 REPLY QR REFUSED
 SECTION QUESTION
-www.refused.example.com. IN NS
+www.refused.example.com. IN A
 ENTRY_END
 
 ENTRY_BEGIN
@@ -90,9 +90,9 @@ MATCH opcode qtype qname
 ADJUST copy_id
 REPLY QR NOERROR
 SECTION QUESTION
-www.refused.example.com. IN A
+www.refused.example.com. IN AAAA
 SECTION ANSWER
-www.refused.example.com. IN A	10.20.30.40
+www.refused.example.com. IN AAAA	::1
 SECTION AUTHORITY
 example.com.	IN NS	ns.example.com.
 SECTION ADDITIONAL
@@ -104,7 +104,7 @@ STEP 10 QUERY
 ENTRY_BEGIN
 REPLY RD
 SECTION QUESTION
-www.refused.example.com. IN A
+www.refused.example.com. IN AAAA
 ENTRY_END
 
 STEP 20 CHECK_ANSWER
@@ -112,9 +112,9 @@ ENTRY_BEGIN
 MATCH all
 REPLY QR RD RA NOERROR
 SECTION QUESTION
-www.refused.example.com. IN A
+www.refused.example.com. IN AAAA
 SECTION ANSWER
-www.refused.example.com. IN A	10.20.30.40
+www.refused.example.com. IN AAAA ::1
 SECTION AUTHORITY
 example.com.	IN NS	ns.example.com.
 SECTION ADDITIONAL
